@@ -1,0 +1,13 @@
+<?xml version="1.0" encoding="utf-8" standalone="yes" ?>
+<T3locallang>
+	<meta type="array">
+		<type>module</type>
+		<description>Language labels for the user profile's last visitors widget</description>
+	</meta>
+	<data type="array">
+		<languageKey index="default" type="array">
+			<label index="label_LastVisitorsWidget">Last profile visitors</label>
+			<label index="msg_no_visitors_yet">No visitors yet</label>
+		</languageKey>
+	</data>
+</T3locallang>
