@@ -26,7 +26,7 @@ plugin.tx_community {
 
 		# uid of the role for all people. also not community members
 		anonymousRoleId = 0
-		
+
 		# uid of the role for all community members
 		communityMemberRoleId = 0
 	}
@@ -91,6 +91,12 @@ plugin.tx_community {
 					templateFile = EXT:community/resources/templates/userprofile/onlinefriendswidget.htm
 
 					onlineTimeOut = 3600
+				}
+
+				lastVisitors {
+					templateFile = EXT:community/resources/templates/userprofile/lastvisitorswidget.htm
+
+					numberOfLastVisitorsToLog = 5
 				}
 			}
 		}
