@@ -1,6 +1,9 @@
 2008-11-12 Ingo Renner  <ingo@typo3.org>
 
 	* fixed naming of the widget widget
+	* added a last visitors widget to the user profile
+	* added a new index to the relations table
+	* changed the type of some fields for the relations table
 
 2008-11-12 Frank Naegler  <typo3@naegler.net>
 
